# EnumBitFlags

./: Cargo.toml  LICENSE  README.md
src/: arguments.rs  flags_type.rs  lib.rs  parser.rs  utils.rs
tests/: test_macro.rs
