[package]
name = "EnumBitFlags"
version = "1.0.7"
edition = "2021"
authors = ["gavrilut.dragos@gmail.com"]
description = "EnumBitFlags is an implementation of flags support for enums"
license = "MIT"
keywords = ["bitflags", "enum", "enumbitflags", "enumflags", "flags"]
categoies = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/gdt050579/EnumBitFlags/"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
